responsive images for projects

--- a/public/index.html
+++ b/public/index.html
@@ -37,26 +37,35 @@
 
 <div class="work">
 
-    <div class='interstings'>
-      <p>Interestings</p>
+    <div class='interestings'>
+      <div class='imageoverlay'>
+        <p>Interestings</p>
         <p>Bringing news and interesting content from across the web to one convenient app</p>
+        <div class='links'>
           <a href='https://interestings-app.firebaseapp.com/' alt='launch app'>
-            <img class='icon' src='./media/monitor.png'>
+            <img class='icon description' src='./media/monitor.png'>
           </a>
           <a href='https://github.com/bethjaw/Q1-Interestings' alt='github'>
-            <img class='icon' src='./media/github-logo.png'>
+            <img class='icon description' src='./media/github-logo.png'>
           </a>
-    </div>
+        </div>
+        </div>
+      </div>
+
 
     <div class='fable'>
-      <p>Fable Forum</p>
-      <p>A forum for writing, creating, inspirating and sharing short stories.</p>
-      <a href='https://prosepros-fable.herokuapp.com/' alt='launch app'>
-        <img class='icon' src='./media/monitor.png'>
-      </a>
-      <a href='https://github.com/Prose-Pros/fable' alt='github'>
-        <img class='icon' src='./media/github-logo.png'>
-      </a>
+      <div class='imageoverlay'>
+        <p>Fable Forum</p>
+        <p>A forum for writing, creating, inspirating and sharing short stories.</p>
+        <div class='links'>
+          <a href='https://prosepros-fable.herokuapp.com/' alt='launch app'>
+            <img class='icon' src='./media/monitor.png'>
+          </a>
+          <a href='https://github.com/Prose-Pros/fable' alt='github'>
+            <img class='icon' src='./media/github-logo.png'>
+          </a>
+        </div>
+      </div>
     </div>
 
 
