--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,15 @@
 <div class='contact'>
   <p>Contact Info</p>
 
+  <div class='formDiv'>
+    <form class='contactForm'>
+      <label>Name</label>
+      <input type=text name='name'>
+      <label>Message</label>
+      <textarea type='text' name='message'></textarea>
+      <button>Get in Touch</button>
+    </form>
+  </div>
 </div>
 
 
