--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Hi, I'm Beth!</title>
     <link rel='stylesheet' href='main.css'>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
     <meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
@@ -13,12 +14,13 @@
   <body>
 
   <header class='header'>
-    <div class='logoDiv'>
+    <!-- <div class='logoDiv'>
       <img class='logo' style="position: absolute; top: 0; left: 0; border: 0;" src='./media/logoHook.png'>
-    </div>
+    </div> -->
     <div>
-      <h1 class='headname'>Beth Jaworski</h1>
-      <!-- <h3 class='subhead'>JAVASCRIPT DEVELOPER</h3> -->
+      <img class='logo' src='./media/BethJaworski-horizontal.png'>
+      <!-- <h1 class='headname'>Beth </br> Jaworski</h1>
+      <h3 class='subhead'>FULL STACK DEVELOPER</h3> -->
     </div>
   </header>
 
@@ -38,7 +40,7 @@
   <div class=projects>
 
     <div class='capstone'>
-      <img class='cap-image' src='./media/interestings-dark2.png'>
+      <img class='cap-image' src='./media/interestings-light.png'>
       <div class='project-des'>
         <p class='proj-name'>CAPSTONE</p>
         <p>This is where my capstone will go!</p>
@@ -53,7 +55,7 @@
 
 
     <div class='interestings'>
-      <img class='interest-image' src='./media/interestings-dark2.png'>
+      <img class='interest-image' src='./media/interestings-light.png'>
         <div class='project-des'>
             <p class='proj-name'>Interestings</p>
             <p>Bringing news and interesting content from across the web to one convenient app</p>
@@ -68,7 +70,7 @@
 
 
     <div class='fable'>
-      <img class='fable-image' src='./media/fable-light2.png'>
+      <img class='fable-image' src='./media/fable-light.png'>
       <div class='project-des'>
         <p class='proj-name'>Fable Forum</p>
         <p>A forum for writing, creating, inspirating and sharing short stories.</p>
@@ -82,7 +84,7 @@
     </div>
 
     <div class='roofstops'>
-      <img class='roof-image' src='./media/roofstops1.png'>
+      <img class='roof-image' src='./media/roofstops-light.png'>
       <div class='project-des'>
         <p class='proj-name'>Roofstops</p>
         <p>Search for the location nearest you to eat and imbibe on the roof!</p>
