--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,10 @@
   <body>
 
   <header class='header'>
-    <!-- <div class='logoDiv'>
-      <img class='logo' style="position: absolute; top: 0; left: 0; border: 0;" src='./media/logoHook.png'>
-    </div> -->
     <div>
       <img class='logo' src='./media/BethJaworski-horizontal.png'>
-      <!-- <h1 class='headname'>Beth </br> Jaworski</h1>
-      <h3 class='subhead'>FULL STACK DEVELOPER</h3> -->
     </div>
   </header>
-
 
 <section class='main'>
   <div class='intro'>
@@ -45,8 +39,8 @@
         <p class='proj-name'>CAPSTONE</p>
         <p>This is where my capstone will go!</p>
         <div class='links'>
-          <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app'><img class='icon' src='./media/smartphone.png'></a>
-          <a href='https://github.com/Roofstops/Roofstops' alt='github'>
+          <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a>
+          <a href='https://github.com/Roofstops/Roofstops' alt='github' target="_blank">
             <img class='icon' src='./media/github-logo.png'>
           </a>
         </div>
@@ -60,8 +54,8 @@
             <p class='proj-name'>Interestings</p>
             <p>Bringing news and interesting content from across the web to one convenient app</p>
             <div class='links'>
-              <a href='https://interestings-app.firebaseapp.com/' alt='launch app'><img class='icon description' src='./media/monitor.png'></a>
-              <a href='https://github.com/bethjaw/Q1-Interestings' alt='github'>
+              <a href='https://interestings-app.firebaseapp.com/' alt='launch app' target="_blank"><img class='icon description' src='./media/monitor.png'></a>
+              <a href='https://github.com/bethjaw/Q1-Interestings' alt='github' target="_blank">
                 <img class='icon description' src='./media/github-logo.png'>
               </a>
             </div>
@@ -75,8 +69,8 @@
         <p class='proj-name'>Fable Forum</p>
         <p>A forum for writing, creating, inspirating and sharing short stories.</p>
         <div class='links'>
-          <a href='https://prosepros-fable.herokuapp.com/' alt='launch app'><img class='icon' src='./media/monitor.png'></a>
-          <a href='https://github.com/Prose-Pros/fable' alt='github'>
+          <a href='https://prosepros-fable.herokuapp.com/' alt='launch app' target="_blank"><img class='icon' src='./media/monitor.png'></a>
+          <a href='https://github.com/Prose-Pros/fable' alt='github' target="_blank">
             <img class='icon' src='./media/github-logo.png'>
           </a>
         </div>
@@ -89,8 +83,8 @@
         <p class='proj-name'>Roofstops</p>
         <p>Search for the location nearest you to eat and imbibe on the roof!</p>
         <div class='links'>
-          <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app'><img class='icon' src='./media/smartphone.png'></a>
-          <a href='https://github.com/Roofstops/Roofstops' alt='github'>
+          <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a>
+          <a href='https://github.com/Roofstops/Roofstops' alt='github' target="_blank">
             <img class='icon' src='./media/github-logo.png'>
           </a>
         </div>
@@ -108,14 +102,28 @@
   </div>
 </section>
 
+<div class='parallax'>
+  <div class='transparent'>
+    <h2 class='title2'>Let's Chat!</h2>
+  </div>
+</div>
 
 <section class='contact'>
-  <h2 class='title'>Let's Chat!</h2>
-  <p class='email'>hello@bethjaw.com</p>
-  <a href='https://github.com/bethjaw'><img class='icon' src='./media/github-logo.png'></a>
-  <a href='https://www.linkedin.com/in/bethjaw/'>
-    <img class='icon' src='./media/linkedin-logo-button.png'>
-  </a>
+  <!-- <h2 class='title'>Let's Chat!</h2> -->
+  <div class='headshotDiv'>
+    <img class='headshot' src='./media/headshot2.png'>
+  </div>
+  <div>
+    <p>I am currently looking for full time or </br> contract to hire work and I'd love to chat with you! </p>
+      <p>You can find my full resume <a class='resume' href='./media/BethJaworski-Resume.pdf' target="_blank">here</a>.</p>
+    <a href='mailto:hello@bethjaw.com'><button class='email'>I love email!</button></a>
+    <div class='contactIcons'>
+      <a href='https://github.com/bethjaw' target="_blank"><img class='icon' src='./media/github-logo.png'></a>
+      <a href='https://www.linkedin.com/in/bethjaw/' target="_blank">
+        <img class='icon' src='./media/linkedin-logo-button.png'>
+      </a>
+    </div>
+  </div>
 </section>
 
 
