added capstone, edited buttons

--- a/public/index.html
+++ b/public/index.html
@@ -19,28 +19,32 @@
     </div>
   </header>
 
-<section class='main'>
-  <div class='intro'>
-      <h2>Hi, I'm Beth. I'm a JavaScript Developer and Software Engineer.</h2>
-  </div>
+<div class='parallax2'>
+  <div class='transparent'>
+    <section class='main'>
+      <div class='intro'>
+          <h2>Hi, I'm Beth. I'm a JavaScript Developer and Software Engineer.</h2>
+      </div>
 
-  <div class='bio'>
-    <p>With a background in communication and marketing, I am inspired by people and their stories. I thrive in a team environment working to both solve problems and help others succeed. When not coding you’ll find me logged off taking full advantage of the Rocky Mountains.</p>
+      <div class='bio'>
+        <p>With a background in communication and marketing, I am inspired by people and their stories. I thrive in a team environment working to both solve problems and help others succeed. When not coding you’ll find me logged off taking full advantage of the Rocky Mountains.</p>
+      </div>
+    </section>
   </div>
-</section>
+</div>
 
 <section class="work">
   <h2 class='title'>Recent Projects</h2>
   <div class=projects>
 
     <div class='capstone'>
-      <img class='cap-image' src='./media/interestings-light.png'>
+      <img class='cap-image' src='./media/golocal.png'>
       <div class='project-des'>
-        <p class='proj-name'>CAPSTONE</p>
-        <p>This is where my capstone will go!</p>
+        <p class='proj-name'>GOLOCAL</p>
+        <p class='descrip'>Travel recommendations from the people </br> you know and trust</p>
         <div class='links'>
-          <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a>
-          <a href='https://github.com/Roofstops/Roofstops' alt='github' target="_blank">
+          <!-- <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a> -->
+          <a href='https://github.com/bethjaw/golocal' alt='github' target="_blank">
             <img class='icon' src='./media/github-logo.png'>
           </a>
         </div>
@@ -52,7 +56,7 @@
       <img class='interest-image' src='./media/interestings-light.png'>
         <div class='project-des'>
             <p class='proj-name'>Interestings</p>
-            <p>Bringing news and interesting content from across the web to one convenient app</p>
+            <p class='descrip'>Bringing news and interesting content from across </br> the web to one convenient app</p>
             <div class='links'>
               <a href='https://interestings-app.firebaseapp.com/' alt='launch app' target="_blank"><img class='icon description' src='./media/monitor.png'></a>
               <a href='https://github.com/bethjaw/Q1-Interestings' alt='github' target="_blank">
@@ -67,7 +71,7 @@
       <img class='fable-image' src='./media/fable-light.png'>
       <div class='project-des'>
         <p class='proj-name'>Fable Forum</p>
-        <p>A forum for writing, creating, inspirating and sharing short stories.</p>
+        <p class='descrip'>A forum for writing, creating, inspirating and </br> sharing short stories.</p>
         <div class='links'>
           <a href='https://prosepros-fable.herokuapp.com/' alt='launch app' target="_blank"><img class='icon' src='./media/monitor.png'></a>
           <a href='https://github.com/Prose-Pros/fable' alt='github' target="_blank">
@@ -81,7 +85,7 @@
       <img class='roof-image' src='./media/roofstops-light.png'>
       <div class='project-des'>
         <p class='proj-name'>Roofstops</p>
-        <p>Search for the location nearest you to eat and imbibe on the roof!</p>
+        <p class='descrip'>Search for the location nearest you to eat </br> and imbibe on the roof!</p>
         <div class='links'>
           <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a>
           <a href='https://github.com/Roofstops/Roofstops' alt='github' target="_blank">
