added expo link to golocal app

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <p class='proj-name'>GOLOCAL</p>
         <p class='descrip'>Travel recommendations from the people </br> you know and trust</p>
         <div class='links'>
-          <!-- <a href='https://expo.io/@geebrown43/roofstops_dnvr' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a> -->
+          <a href='https://expo.io/@bethjaw/golocal' alt='launch app' target="_blank"><img class='icon' src='./media/smartphone.png'></a>
           <a href='https://github.com/bethjaw/golocal' alt='github' target="_blank">
             <img class='icon' src='./media/github-logo.png'>
           </a>
