--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
 
 <footer class='footer'>
-  <p class='copy'>Copyright &copy; 2017 | Beth Jaworski | Colorado, USA</p>
+  <!-- <p class='copy'>Beth Jaworski | Colorado, USA</p> -->
 </footer>
 
     <script src='app.js'></script>
