--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
       <img class='fable-image' src='./media/fable-light.png'>
       <div class='project-des'>
         <p class='proj-name'>Fable Forum</p>
-        <p class='descrip'>A forum for writing, creating, inspirating and </br> sharing short stories.</p>
+        <p class='descrip'>A forum for writing, creating, inspiring and </br> sharing short stories.</p>
         <div class='links'>
           <a href='https://prosepros-fable.herokuapp.com/' alt='launch app' target="_blank"><img class='icon' src='./media/monitor.png'></a>
           <a href='https://github.com/Prose-Pros/fable' alt='github' target="_blank">
